objects/Quota_Management_Securtity_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exceptional_Users__c</fullName>
        <description>Exceptional to allow Read/Write access for managing quotas.</description>
        <inlineHelpText>Exceptional to allow Read/Write access for managing quotas.</inlineHelpText>
        <label>Exceptional Users (Read/Write)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <inlineHelpText>Please enter either "Read Only" or "Read/Write"</inlineHelpText>
        <label>Permission</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>Quota Management Security Setting</label>
</CustomObject>